# super-pong

./: .gitignore  BACKEND.md  EV.md  FRONTEND.md  NEW-PLAN.md  README.md  STATS.md  play  pyproject.toml  pytest.ini
backend/: pyproject.toml  seed.py
backend/app/: database.py  main.py  models.py  stats.py
backend/app/routers/: games.py  players.py  punishment_bongs.py  shots.py  teams.py  tournaments.py
elbow_tracking/: app.py  detector.py  gesture.py  pyproject.toml  renderer.py  violation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: PlayerCombobox.jsx
frontend/src/components/stats/: ByTheNumbersSlide.jsx  PlayerHighlightSlide.jsx  PlayerOverviewSlide.jsx  PunishmentBongsSlide.jsx  SlideContainer.jsx  SuperlativesSlide.jsx  TournamentStandingsSlide.jsx
frontend/src/components/ui/: dialog.jsx
frontend/src/pages/: GamePlay.jsx  GamesList.jsx  StatsDashboard.jsx  TournamentList.jsx  TournamentSetup.jsx
frontend/src/services/: api.js
src/: app.py
src/controllers/: tournament_controller.py
src/elbow_tracking/: elbow_tracking.py
src/models/: game.py  game_engine.py  player.py  team.py  tournament.py
src/tests/models/: test_game_engine.py
src/ui/: app_state.py  colors.py
src/ui/views/: game_play_page.py  setup_complete_page.py  start_page.py
