[project]
name = "super-pong"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pyqt5>=5.15.11",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
