[project]
name = "super-pong-backend"
version = "0.1.0"
description = "Super Pong beer pong tracker backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "python-multipart",
    "ruff>=0.15.1",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
]
